[package]
name = "tls_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.3.1", features = ["full"] }
bytes = "1.2"
futures-util = { version = "0.3.30" }
http-body-util = { version = "0.1.1" }
http-body = "1"
tokio = { version = "1", features = ["sync", "full"] }
hyper-util = { version = "0.1.3", features = ["full"] }
